# desktop

./: .gitignore  AnimatedButton.cpp  AnimatedButton.h  CMakeLists.txt  OneVPN.pro  README.md  build.sh  connectwindow.cpp  connectwindow.h  connectwindow.ui  dialogrestoreinternet.cpp  dialogrestoreinternet.h  dialogrestoreinternet.ui  dialogsettings.cpp  dialogsettings.h  dialogsettings.ui  dnsleaks.cpp  dnsleaks.h  docker-compose.yml  flagsresource.cpp  flagsresource.h  formconnect.cpp  formconnect.h  formconnect.ui  formhaveaccount.cpp  formhaveaccount.h  formhaveaccount.ui  formlogin.cpp  formlogin.h  formlogin.ui  formloginwaitanimation.cpp  formloginwaitanimation.h  formloginwaitanimation.ui  getmyip.cpp  getmyip.h  killswitch.cpp  killswitch.h  log.cpp  log.h  main.cpp  (+26 more)
.github/workflows/: linux.yml  win.yml
Design/Glober/__MACOSX/: ._Glober
Images/Mac/: com.aaa.ONEVpn.launcher.plist
Linux/: connection.cpp  connection.h  oneVpnTunIpTablesConfig.conf  openvpnconnectorqt.cpp  openvpnconnectorqt.h  platformutils.cpp  tun.conf
Linux/helper/: a.out  onevpnhelper  onevpnhelper.c  onevpniptablesloader  onevpniptablesloader.c
Linux/onevpn-pkg/onevpn_1.0/DEBIAN/: control
Linux/onevpn-pkg/onevpn_2/DEBIAN/: control
Linux/onevpn-pkg/onevpn_3/DEBIAN/: control
Linux/scripts/: prepare.sh  qt.sh
Mac/: Info.plist  OpenVPNConnector.h  OpenVPNConnector.mm  OpenVPNConnectorQt.h  OpenVPNConnectorQt.mm  connection.cpp  connection.h  deploy_sign.sh  dsa_priv.pem  dsa_pub.pem  platformutils.mm  uninstallHelper.sh
Mac/BuildScripts/: OneVPN.L25206  OneVPN.ovpn  build.sh  build_xcode.sh  import
Mac/BuildScripts/OneVPN-build/OneVPN.app/Contents/Resources/: tap-up-down.sh
Mac/BuildScripts/OneVPN-build/OneVPN.app/Contents/Resources/tap-signed.kext/Contents/_CodeSignature/: CodeSignature
Mac/BuildScripts/OneVPN-build/OneVPN.app/Contents/Resources/tun-signed.kext/Contents/: Info.plist
Mac/BuildScripts/OneVPN-build/moc/: moc_animatedbutton.cpp  moc_paranoik.cpp  moc_predefs.h  moc_singleinstance.cpp
Mac/BuildScripts/installer/: OneVpn.pkgproj  post_install.sh
Mac/BuildScripts/sc/: OneVPN.ovpn  ddnbhjahcjffiapkoabnpfldljopaiifdjcpejhn.mip
Mac/Frameworks/: libcrypto.1.0.0.dylib  libssl.1.0.0.dylib
Mac/Kexts/tap-signed.kext/Contents/_CodeSignature/: CodeDirectory
Mac/Kexts/tun-signed.kext/Contents/_CodeSignature/: CodeSignature
Mac/OVPNClientSrc/OVPNClient/OVPNClient.xcodeproj/: project.pbxproj
Mac/OVPNClientSrc/OVPNClient/OVPNClient.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Mac/OVPNClientSrc/OVPNClient/OVPNClient.xcodeproj/project.xcworkspace/xcshareddata/: OVPNClient.xccheckout
Mac/OVPNClientSrc/OVPNClient/OVPNClient.xcodeproj/project.xcworkspace/xcuserdata/admin.xcuserdatad/: UserInterfaceState.xcuserstate
Mac/OVPNClientSrc/OVPNClient/OVPNClient.xcodeproj/xcuserdata/admin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Mac/OVPNClientSrc/OVPNClient/OVPNClient.xcodeproj/xcuserdata/admin.xcuserdatad/xcschemes/: OVPNClient.xcscheme  OVPNHelper.xcscheme  jhjhjh.xcscheme  xcschememanagement.plist
Mac/OVPNClientSrc/OVPNClient/OVPNHelper/: OVPNHelper-Info.plist  OVPNHelper.c  com.aaa.OneVPN.starter.plist  com.aaa.onevpn.OVPNHelper.plist
Mac/Resources/: down.sh  options  sstpc  up.sh
Mac/Resources/tap-signed.kext/Contents/: Info.plist
Mac/Resources/tap.kext/Contents/: Info.plist
Mac/Resources/tun-signed.kext/Contents/_CodeSignature/: CodeDirectory
Mac/Resources/tun.kext/Contents/: Info.plist
Scripts/: build.sh
SingleApplication/: singleinstance.h
Windows/: connection.cpp  connection.h  openvpnconnectorqt.cpp  openvpnconnectorqt.h
WindowsOpenVPNService/: OpenVPNService.pro  main.cpp
cmake/: QtCommon.cmake
docker/: Dockerfile  clone_qt.sh  do_test.sh  qt-noninteractive.qs
resources/: AppIcon.icns  mainwindow.qrc
resources/OneVPN/: FormHaveAccount.qss  MainWindow.qss  QMenu.qss
src/: AnimatedButton.cpp  AnimatedButton.h  OneVPN.pro  Scheduler.h  dialogrestoreinternet.cpp  dialogrestoreinternet.h  dialogrestoreinternet.ui  dialogsettings.cpp  dialogsettings.h  dialogsettings.ui  dnsleaks.cpp  dnsleaks.h  formconnect.cpp  formconnect.h  formconnect.ui  formhaveaccount.cpp  formhaveaccount.h  formhaveaccount.ui  formlogin.cpp  formlogin.h  formlogin.ui  formloginwaitanimation.cpp  formloginwaitanimation.h  formloginwaitanimation.ui  killswitch.cpp  killswitch.h  main.cpp  mmainwindow.cpp  mmainwindow.h  mmainwindow.ui  platformutils.h  preferences.cpp  preferences.h  preferences.ui  serversmodel.cpp  serversmodel.h  settings.h  settingskeys.h  traypopover.cpp  traypopover.h  (+3 more)
src/Controllers/: ConfigManager.cpp  ConfigManager.h  ConnectionFactory.cpp  ConnectionFactory.h  Log.cpp  Log.h  LogBrowserDialog.cpp  LogBrowserDialog.h  ServerSide.cpp  ServerSide.h  VPNConnection.cpp  VPNConnection.h
src/DAOs/: Log.h  ServerSide.h  Types.h  VPNConnection.h  configs.h
src/Interfaces/: AbstractConnection.h
src/Mac/: Connection.cpp  Connection.h  CrashlyticsImpl.h  CrashlyticsImpl.mm  OpenVPNConnector.h  OpenVPNConnector.mm  OpenVPNConnectorQt.h  OpenVPNConnectorQt.mm  Updater.h  Updater.mm  platformutils.mm
src/SingleApplication/: singleinstance.cpp
src/Windows/: connection.cpp  connection.h  openvpnconnectorqt.cpp  openvpnconnectorqt.h  platformutils.cpp
src/pubsub/: Agent.h  Dispatcher.cpp  Dispatcher.h  Logging.h  Message.h  Publisher.h  Subscriber.cpp  Subscriber.h
styles/: FormHaveAccount.qss  MainWindow.qss  QMenu.qss
win_installer/: onevpn_installer.iss  services_unicode.iss
xc/: Updater.mm
xc/OneVPN.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
xc/OneVPN.xcodeproj/project.xcworkspace/xcuserdata/efreyu.xcuserdatad/: UserInterfaceState.xcuserstate
xc/OneVPN.xcodeproj/project.xcworkspace/xcuserdata/sergey.xcuserdatad/: UserInterfaceState.xcuserstate
xc/OneVPN.xcodeproj/xcshareddata/xcschemes/: OneVPN.xcscheme
xc/OneVPN.xcodeproj/xcuserdata/sergey.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xc/OneVPN.xcodeproj/xcuserdata/sergey.xcuserdatad/xcschemes/: xcschememanagement.plist
